Feature/eclipse plugin setup (#30)
* Setup of Tycho with Eclipse plugins

* Updating build pipelines

* Adding script to build and gather information for debugging purposes

* Adding system wide readme.md's

* Creating make files

* Adding script to package the game code in a zip file with minimum size

* Update .gitignore